// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/edges createEdge works for "authors" 1`] = `
Object {
  "addressParts": Array [
    "sourcecred",
    "github",
    "AUTHORS",
    "3",
    "USERLIKE",
    "USER",
    "decentralion",
    "4",
    "ISSUE",
    "sourcecred",
    "example-github",
    "2",
  ],
  "dstParts": Array [
    "sourcecred",
    "github",
    "ISSUE",
    "sourcecred",
    "example-github",
    "2",
  ],
  "srcParts": Array [
    "sourcecred",
    "github",
    "USERLIKE",
    "USER",
    "decentralion",
  ],
}
`;

exports[`plugins/github/edges createEdge works for "hasParent" 1`] = `
Object {
  "addressParts": Array [
    "sourcecred",
    "github",
    "HAS_PARENT",
    "7",
    "COMMENT",
    "REVIEW",
    "sourcecred",
    "example-github",
    "5",
    "100313899",
    "171460198",
  ],
  "dstParts": Array [
    "sourcecred",
    "github",
    "REVIEW",
    "sourcecred",
    "example-github",
    "5",
    "100313899",
  ],
  "srcParts": Array [
    "sourcecred",
    "github",
    "COMMENT",
    "REVIEW",
    "sourcecred",
    "example-github",
    "5",
    "100313899",
    "171460198",
  ],
}
`;

exports[`plugins/github/edges createEdge works for "mergedAs" 1`] = `
Object {
  "addressParts": Array [
    "sourcecred",
    "github",
    "MERGED_AS",
    "4",
    "PULL",
    "sourcecred",
    "example-github",
    "5",
  ],
  "dstParts": Array [
    "sourcecred",
    "git",
    "COMMIT",
    "123",
  ],
  "srcParts": Array [
    "sourcecred",
    "github",
    "PULL",
    "sourcecred",
    "example-github",
    "5",
  ],
}
`;

exports[`plugins/github/edges createEdge works for "references" 1`] = `
Object {
  "addressParts": Array [
    "sourcecred",
    "github",
    "REFERENCES",
    "4",
    "ISSUE",
    "sourcecred",
    "example-github",
    "2",
    "4",
    "PULL",
    "sourcecred",
    "example-github",
    "5",
  ],
  "dstParts": Array [
    "sourcecred",
    "github",
    "PULL",
    "sourcecred",
    "example-github",
    "5",
  ],
  "srcParts": Array [
    "sourcecred",
    "github",
    "ISSUE",
    "sourcecred",
    "example-github",
    "2",
  ],
}
`;
